# weather-mcp

./: .gitignore  README.md  coverage.xml  example-api-output.json  pyproject.toml  weather.py
.github/workflows/: run-tests.yml
tests/: __init__.py  test_weather.py
